--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="Tulisno">
+  <meta name="author" content="NulisWoi">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
     rel="stylesheet">
 
-  <title>Tulisno | Web Auto Nulis Tugas</title>
+  <title>NulisWoi | Web Auto Nulis Tugas</title>
   <!--
 
 -->
@@ -48,14 +48,14 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              Tulisno
+              NulisWoi
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li class="scroll-to-section"><a href="#welcome" class="menu-item">Home</a></li>
 
-              <li class="scroll-to-section"><a href="#Tulisno" class="menu-item active">Tulisno</a>
+              <li class="scroll-to-section"><a href="#NulisWoi" class="menu-item active">NulisWoi</a>
               </li>
 
               <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Contact Us</a></li>
@@ -82,11 +82,11 @@
           <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
             data-scroll-reveal="enter left move 30px over 0.6s after 0.4s" data-scroll-reveal-id="1"
             data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
-            <h1>Tulisno <em>.</em></h1>
+            <h1>NulisWoi <em>.</em></h1>
             <p>Mager mau nulis offline? .
-              Mending pakai tulisno.
-              Tulisno merupakan website nulis otomatis bagi kalian yg mager nulis dikertas</p>
-            <a href="#Tulisno" class="main-button-slider">Start</a>
+              Mending pakai nuliswoi.
+              NulisWoi merupakan website nulis otomatis bagi kalian yg mager nulis dikertas</p>
+            <a href="#NulisWoi" class="main-button-slider">Start</a>
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
     }
   </script>
   <!-- ***** Features Big Item Start ***** -->
-  <section class="section" id="Tulisno">
+  <section class="section" id="NulisWoi">
     <div class="container">
       <div class="row">
 
@@ -318,17 +318,14 @@
           </div>
           <!-- ***** Contact Form End ***** -->
           <div class="right-content col-lg-6 col-md-12 col-sm-12">
-            <h2>More About Tulisno</h2>
-            <p>Mager mau nulis offline? . Mending pakai tulisno. Tulisno merupakan website nulis otomatis bagi kalian yg mager nulis dikertas
+            <h2>More About NulisWoi</h2>
+            <p>Mager mau nulis offline? . Mending pakai nuliswoi. NulisWoi merupakan website nulis otomatis bagi kalian yg mager nulis dikertas
               <br><br>If you need this contact form to send email to your inbox, you may follow our <a rel="nofollow"
-                href="https://www.facebook.com/wilsen.orochi.9" target="_parent">contact</a> page
+                href="https://www.instagram.com/sagarasheilendra" target="_parent">contact</a> page
               for more detail.</p>
             <ul class="social">
-              <li><a href="https://www.facebook.com/wilsen.orochi.9" class="d-flex justify-content-center align-items-center"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#" class="d-flex justify-content-center align-items-center"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#" class="d-flex justify-content-center align-items-center"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#" class="d-flex justify-content-center align-items-center"><i class="fa fa-rss"></i></a></li>
-              <li><a href="#" class="d-flex justify-content-center align-items-center"><i class="fa fa-dribbble"></i></a></li>
+              <li><a href="https://www.instagram.com/sagarasheilendra" class="d-flex justify-content-center align-items-center"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/kdandy" class="d-flex justify-content-center align-items-center"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
@@ -336,7 +333,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="sub-footer">
-            <p class="love">Made with ❤ hisyam.ardiansyah_</p>
+            <p class="love">Made with ❤ Dandy Faishal Fahmi</p>
           </div>
         </div>
       </div>
